--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -39,7 +38,7 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h1>Why Love Running With Us?</h1>
+        <h2 id="welcome">Why Love Running With Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
@@ -58,12 +57,13 @@
                 </p>
             </div>
         </div>
-        <div id="right-about"div>
+        <div id="right-about">
             <div class="right-about-heading">
                 <h2>Get Social</h2>
                 <hr>
                 <p>
-                    When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events
+                    When we run with others, we can run farther and faster more easily. Social running can pull you out
+                    of a running funk or low mood, inspire you to try new events.
                 </p>
             </div>
             <div class="right-about-heading">
@@ -74,10 +74,48 @@
                 </p>
             </div>
         </div>
-        <div id="center-about">Center</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
+        </div>
     </section>
     <section>
-        Running locations, distances and times
+        <div>
+            <h2>Urban</h2>
+            <h3>Monday</h3>
+            <h3>5K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
+        </div>
+        <div>
+            <h2>Trail</h2>
+            <h3>Wednesday</h3>
+            <h3>10K</h3>
+            <h3>The Phoenix Park</h3>
+            <h3>18:30</h3>
+        </div>
+        <div>
+        <h2>Urban</h2>
+            <h3>Friday</h3>
+            <h3>5K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
+        </div>
+        <div>
+            <h2>Trail</h2>
+                <h3>Saturday</h3>
+                <h3>10K</h3>
+                <h3>The Phoenix Park</h3>
+                <h3>09:30</h3>
+        </div>
+        <div>
+            <h2>Coffee</h2>
+            <h3>Sunday</h3>
+            <h3>0K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>11:30</h3>
+        </div>
     </section>
     <footer>
         social links here
